--- a/index.html
+++ b/index.html
@@ -28,26 +28,25 @@
                     <ul>
                         <li><strong>Tgl Lahir:</strong> 14 Juli 1986</li>
                         <li><strong>Telepon:</strong> (021) 555-SHELL</li>
-                        <li><strong>Alamat:</strong> Jl. Nanas No. 124, Bikini Bottom, Samudra Pasifik</li>
-                        <li><strong>Sosmed:</strong> @si_kuning_kotak (OysterGram)</li>
+                        <li><strong>Alamat:</strong> Jl. Nanas No. 124, Bikini Bottom</li>
+                        <li><strong>Sosmed:</strong> @si_kuning_kotak</li>
                     </ul>
                 </section>
 
                 <section class="bubble-card hobby-section">
                     <h2>Hobby</h2>
                     <ul>
-                        <li>Menangkap Ubur-ubur di Ladang Ubur-ubur</li>
-                        <li>Berlatih Karate (dengan Sandy Cheeks)</li>
-                        <li>Meniup Gelembung Bentuk Seni</li>
-                        <li>Bekerja di Krusty Krab</li>
+                        <li>Menangkap Ubur-ubur</li>
+                        <li>Karate</li>
+                        <li>Meniup Gelembung</li>
                     </ul>
                 </section>
+                 
                  <section class="bubble-card language-section">
                     <h2>Bahasa</h2>
                     <ul>
                         <li>Bahasa Ikan (Native)</li>
                         <li>Bahasa Inggris (Fasih)</li>
-                        <li>Bahasa Lumba-lumba (Dasar)</li>
                     </ul>
                 </section>
             </aside>
@@ -55,7 +54,7 @@
             <section class="main-content">
                 <section class="bubble-card about-section">
                     <h2>Tentang Diri Saya!</h2>
-                    <p>Saya adalah spons laut yang optimis, pekerja keras, dan selalu siap menghadapi hari dengan tawa khas saya! Saya memiliki dedikasi yang tak tertandingi dalam pekerjaan saya sebagai koki, selalu memastikan setiap Krabby Patty dibuat dengan penuh cinta. Saya cepat belajar ("menyerap" ilmu seperti spons!), teman yang setia, dan selalu melihat sisi terang dari setiap situasi di bawah laut.</p>
+                    <p>Saya adalah spons laut yang optimis, pekerja keras, dan selalu siap menghadapi hari dengan tawa khas saya! Saya memiliki dedikasi yang tak tertandingi dalam pekerjaan saya sebagai koki.</p>
                 </section>
 
                 <section class="bubble-card education-section">
@@ -63,22 +62,25 @@
                     <div class="edu-item">
                         <h3>Sekolah Mengemudi Ny. Puff</h3>
                         <p class="edu-date">Berulang Kali - Sekarang</p>
-                        <p>Calon pemegang SIM (Sedang dalam proses belajar yang sangat panjang).</p>
+                        <p>Calon pemegang SIM (Sedang dalam proses belajar).</p>
                     </div>
                     <div class="edu-item">
-                        <h3>Akademi Seni Kuliner Krusty Krab</h3>
+                        <h3>Akademi Kuliner Krusty Krab</h3>
                         <p class="edu-date">Lulus dengan Pujian</p>
-                        <p>Mentorship langsung di bawah Tuan Krabs, menguasai seni rahasia pembuatan Krabby Patty.</p>
+                        <p>Mentorship langsung di bawah Tuan Krabs.</p>
                     </div>
                 </section>
-
             </section>
         </main>
+
+        <footer>
+            <p>© 2023 Dibuat di Nanas Bawah Laut. 🍍🌊</p>
+        </footer>
+
+        <img src="spongebob.png" class="deco-char spongebob" alt="SpongeBob" onerror="this.style.display='none'">
+        <img src="patrick.png" class="deco-char patrick" alt="Patrick" onerror="this.style.display='none'">
+
     </div>
-    
-    <footer>
-        <p>© 2023 Dibuat di Nanas Bawah Laut. Siap berpetualang! 🍍🌊</p>
-    </footer>
 
 </body>
 </html>
