--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <img src="https://via.placeholder.com/200x200/F7E600/8B4513?text=Foto+Anda" alt="Foto Profil">
             </div>
             <div class="header-text">
-                <h1>SpongeBob SquarePants</h1>
-                <p class="job-title">Koki Krabby Patty & Ahli Penangkap Ubur-ubur</p>
+                <h1>Hasbi Al-Musyafa</h1>
+                <p class="job-title">Riwayat Hidup</p>
             </div>
         </header>
 
@@ -26,27 +26,27 @@
                 <section class="bubble-card contact-info">
                     <h2>Kontak & Info</h2>
                     <ul>
-                        <li><strong>Tgl Lahir:</strong> 14 Juli 1986</li>
-                        <li><strong>Telepon:</strong> (021) 555-SHELL</li>
-                        <li><strong>Alamat:</strong> Jl. Nanas No. 124, Bikini Bottom</li>
-                        <li><strong>Sosmed:</strong> @si_kuning_kotak</li>
+                        <li><strong>Tgl Lahir:</strong> 11 November 2007</li>
+                        <li><strong>Telepon:</strong> (+62) 8213-0202-078 - HASBI</li>
+                        <li><strong>Alamat:</strong> Baleendah, Manggahang 1, RT4/7</li>
+                        <li><strong>Sosmed:</strong> @benitoitez - instagram</li>
                     </ul>
                 </section>
 
                 <section class="bubble-card hobby-section">
                     <h2>Hobby</h2>
                     <ul>
-                        <li>Menangkap Ubur-ubur</li>
-                        <li>Karate</li>
-                        <li>Meniup Gelembung</li>
+                        <li>Memancing</li>
+                        <li>Bersepeda</li>
+                        <li>Bermain Game</li>
                     </ul>
                 </section>
                  
                  <section class="bubble-card language-section">
                     <h2>Bahasa</h2>
                     <ul>
-                        <li>Bahasa Ikan (Native)</li>
-                        <li>Bahasa Inggris (Fasih)</li>
+                        <li>Bahasa Indonesia (Fasih)</li>
+                        <li>Bahasa Inggris (Basic)</li>
                     </ul>
                 </section>
             </aside>
@@ -54,27 +54,27 @@
             <section class="main-content">
                 <section class="bubble-card about-section">
                     <h2>Tentang Diri Saya!</h2>
-                    <p>Saya adalah spons laut yang optimis, pekerja keras, dan selalu siap menghadapi hari dengan tawa khas saya! Saya memiliki dedikasi yang tak tertandingi dalam pekerjaan saya sebagai koki.</p>
+                    <p>Saya orang yang cepat menyesuaikan diri dengan lingkungan baru dan saya juga terbiasa memimpin tim untuk mencapai tujuan bersama.</p>
                 </section>
 
                 <section class="bubble-card education-section">
                     <h2>Pendidikan</h2>
                     <div class="edu-item">
-                        <h3>Sekolah Mengemudi Ny. Puff</h3>
-                        <p class="edu-date">Berulang Kali - Sekarang</p>
-                        <p>Calon pemegang SIM (Sedang dalam proses belajar).</p>
+                        <h3>Sekolah Di SMP Karya Pembangunan Baleendah</h3>
+                        <p class="edu-date">2020 - 2023</p>
+                        <p>Pernah Menjadi Pemimpin Upacara.</p>
                     </div>
                     <div class="edu-item">
-                        <h3>Akademi Kuliner Krusty Krab</h3>
-                        <p class="edu-date">Lulus dengan Pujian</p>
-                        <p>Mentorship langsung di bawah Tuan Krabs.</p>
+                        <h3>Sekolah Di SMA Karya Pembangunan Baleendah</h3>
+                        <p class="edu-date">2023 - 2026</p>
+                        <p>Pernah Menjadi Anggota Ekskul Badminton.</p>
                     </div>
                 </section>
             </section>
         </main>
 
         <footer>
-            <p>© 2023 Dibuat di Nanas Bawah Laut. 🍍🌊</p>
+            <p>© 2026 Dibuat di kelas. dengan pusing..</p>
         </footer>
 
         <img src="spongebob.png" class="deco-char spongebob" alt="SpongeBob" onerror="this.style.display='none'">
