--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="cv-wrapper">
         <header class="main-header">
             <div class="profile-frame">
-                <img src="https://via.placeholder.com/200x200/F7E600/8B4513?text=Foto+Anda" alt="Foto Profil">
+                <img src="Gemini_Generated_Image_r1l4kcr1l4kcr1l4.png" alt="Foto Profil">
             </div>
             <div class="header-text">
                 <h1>Hasbi Al-Musyafa</h1>
